Update kernel names
Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

--- a/E2E_use_case_with_Intel_Modin_Intel_optimized_scikit-learn/census_modin.ipynb
+++ b/E2E_use_case_with_Intel_Modin_Intel_optimized_scikit-learn/census_modin.ipynb
@@ -366,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Intel AiKit Modin",
+   "display_name": "oneAPI AIKit MLPackage",
    "language": "python",
    "name": "intel-aikit-modin"
   },
