--- a/E2E_use_case_with_Intel_optimized_XGBoost_daal4py/IntelPython_XGBoost_daal4pyPrediction.ipynb
+++ b/E2E_use_case_with_Intel_optimized_XGBoost_daal4py/IntelPython_XGBoost_daal4pyPrediction.ipynb
@@ -334,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Intel AiKit Modin",
+   "display_name": "oneAPI AIKit MLPackage",
    "language": "python",
    "name": "intel-aikit-modin"
   },
