--- a/E2E_use_case_with_Intel_optimized_Tensorflow_LPOT/lpot_sample_tensorflow.ipynb
+++ b/E2E_use_case_with_Intel_optimized_Tensorflow_LPOT/lpot_sample_tensorflow.ipynb
@@ -558,7 +558,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Intel AiKit TensorFlow",
+   "display_name": "oneAPI AIKit DLPackage with TF",
    "language": "python",
    "name": "intel-aikit-tensorflow"
   },
