--- a/E2E_use_case_with_Intel_optimized_XGBoost_daal4py/IntelPython_XGBoost_daal4pyPrediction.ipynb
+++ b/E2E_use_case_with_Intel_optimized_XGBoost_daal4py/IntelPython_XGBoost_daal4pyPrediction.ipynb
@@ -69,7 +69,7 @@
     "import requests\n",
     "import sys\n",
     "import warnings\n",
-    "warnings.filterwarnings("ignore")"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
