rename E2E examples and add a new one for PyTorch
Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

--- a/Intel_Optimized_TensorFlow_and_INC_Quantization_Tool_E2E_Sample/inc_sample_tensorflow.ipynb
+++ b/Intel_Optimized_TensorFlow_and_INC_Quantization_Tool_E2E_Sample/inc_sample_tensorflow.ipynb
@@ -1,10 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================\n",
+    "# Copyright © 2020 Intel Corporation\n",
+    "# \n",
+    "# SPDX-License-Identifier: MIT\n",
+    "# ============================================================="
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intel® Low Precision Optimization Tool (LPOT) Sample for Tensorflow"
+    "# Intel® Neural Compressor Sample for TensorFlow*"
    ]
   },
   {
@@ -12,48 +25,27 @@
    "metadata": {},
    "source": [
     "## Agenda\n",
-    "- Train a CNN Model Based on Keras\n",
-    "- Quantize Keras Model by LPOT\n",
-    "- Compare Quantized Model"
+    "- Train a convolutional neural network (CNN) model by using Keras\n",
+    "- Quantize the Keras model by using Intel® Neural Compressor\n",
+    "- Compare the quantized model with the original model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LPOT Release and Sample \n",
+    "## Setup\n",
     "\n",
-    "This sample code is always updated for the LPOT release in latest oneAPI release.\n",
+    "Import python packages and verify that the correct versions are installed.\n",
     "\n",
-    "If you want to get the sample code for old oneAPI release, please checkout the old sample code release by git tag.\n",
+    "Required packages:\n",
+    "- TensorFlow 2.2 and later\n",
+    "- Intel® Neural Compressor 1.2.1 and later\n",
+    "- Matplotlib\n",
     "\n",
-    "1. Check tags\n",
+    "**Note**: This code sample supports both the current package name for Intel® Neural Compressor (**neural_compressor**) and the old names (**lpot**, **ilit**).\n",
     "\n",
-    "```\n",
-    "git pull\n",
-    "git tag\n",
-    "\n",
-    "2021.1-beta08\n",
-    "2021.1-beta09\n",
-    "2021.1-beta10\n",
-    "\n",
-    "```\n",
-    "\n",
-    "2. Checkout old code release\n",
-    "```\n",
-    "git checkout 2021.1-beta10\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import python packages and check version.\n",
-    "\n",
-    "Make sure the Tensorflow is **2.2** or newer and LPOT is **1.0, 1,1 ** or **1.1**, matplotlib are installed.\n",
-    "\n",
-    "Note， LPOT has an old name **ilit**. Following script supports to old package name **ilit**."
+    "**Please run this sample in the Intel TensorFlow & Quantization Jupyter Kernel environment.**"
    ]
   },
   {
@@ -64,13 +56,18 @@
    "source": [
     "import tensorflow as tf\n",
     "print(\"Tensorflow version {}\".format(tf.__version__))\n",
+    "tf.compat.v1.enable_eager_execution()\n",
     "\n",
     "try:\n",
-    "    import lpot\n",
-    "    print(\"LPOT version {}\".format(lpot.__version__)) \n",
+    "    import neural_compressor as inc\n",
+    "    print(\"neural_compressor version {}\".format(inc.__version__))  \n",
     "except:\n",
-    "    import ilit as lpot\n",
-    "    print(\"iLiT version {}\".format(lpot.__version__))       \n",
+    "    try:\n",
+    "        import lpot as inc\n",
+    "        print(\"LPOT version {}\".format(inc.__version__)) \n",
+    "    except:\n",
+    "        import ilit as inc\n",
+    "        print(\"iLiT version {}\".format(inc.__version__))       \n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -80,12 +77,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Environment Setting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For Intel Optimized TensorFlow 2.5.0 and later, you must set the **TF_ENABLE_MKL_NATIVE_FORMAT=0** environment variable before running Intel® Neural Compressor to quantize FP32 model or deploying the quantized model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env TF_ENABLE_MKL_NATIVE_FORMAT=0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train a CNN Model Based on Keras\n",
     "\n",
-    "We prepare a script '**alexnet.py**' to provide the functions to train a CNN model.\n",
+    "We prepared the `alexnet.py` script with the functions for training a CNN model.\n",
     "\n",
     "### Dataset\n",
-    "Use [MNIST](http://yann.lecun.com/exdb/mnist/) dataset to recognize hand writing numbers. \n",
+    "Use the [MNIST](http://yann.lecun.com/exdb/mnist/) dataset of handwritten digits. \n",
     "Load the dataset."
    ]
   },
@@ -109,8 +129,8 @@
    "source": [
     "### Build Model\n",
     "\n",
-    "Build a CNN model like Alexnet by Keras API based on Tensorflow.\n",
-    "Print the model structure by Keras API: summary()."
+    "Build a CNN model like Alexnet by using Keras API based on TensorFlow.\n",
+    "Use the Keras `summary()` method to print the model structure."
    ]
   },
   {
@@ -134,7 +154,7 @@
    "source": [
     "### Train the Model with the Dataset\n",
     "\n",
-    "Set the **epochs** to \"**3**\""
+    "Set the **epochs** parameter to **3**."
    ]
   },
   {
@@ -154,7 +174,7 @@
    "source": [
     "### Freeze and Save Model to Single PB\n",
     "\n",
-    "Set the input node name is \"**x**\"."
+    "Set the input node name to **x**."
    ]
   },
   {
@@ -196,13 +216,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quantize FP32 Model by LPOT\n",
+    "## Quantize FP32 Model by Using Intel® Neural Compressor\n",
     "\n",
-    "LPOT supports to quantize the model with a validation dataset for tuning.\n",
-    "Finally, it returns an frezon quantized model based on int8.\n",
+    "Intel® Neural Compressor can quantize the model with a validation dataset for tuning.\n",
+    "As a result, it returns a frozen quantized INT8 model.\n",
     "\n",
-    "We prepare a python script \"**LPOT_quantize_model.py**\" to call LPOT to finish the all quantization job.\n",
-    "Following code sample is used to explain the code.\n",
+    "We prepare a python script `inc_quantize_model.py` to call Intel® Neural Compressor to finish the all quantization job.\n",
+    "See the following code sample for explanations.\n",
     "\n",
     "### Define Dataloader\n",
     "\n",
@@ -243,9 +263,7 @@
    "metadata": {},
    "source": [
     "### Define Load FP32 Model\n",
-    "Load the saved fp32 model in previous step.\n",
-    "\n",
-    "It's defined as alexnet.load_pb(in_model)"
+    "Load the FP32 model that we saved in the previous step. See the `alexnet.load_pb(in_model)` function."
    ]
   },
   {
@@ -263,12 +281,12 @@
    "source": [
     "### Define Yaml File\n",
     "\n",
-    "We define alexnet.yaml to save the necessary parameters for LPOT.\n",
-    "In this case, we only need to change the input/output according to the fp32 model.\n",
+    "We created `alexnet.yaml` to save the necessary parameters for Intel® Neural Compressor.\n",
+    "In this case, we only need to change the input/output according to the FP32 model.\n",
     "\n",
-    "In this case, the input node name is '**x**'.\n",
+    "The input node name is **x**.\n",
     "\n",
-    "Output name is '**Identity**'."
+    "The output name is **Identity**."
    ]
   },
   {
@@ -285,7 +303,7 @@
    "metadata": {},
    "source": [
     "### Define Tuning Function\n",
-    "We follow the template to create the tuning function. The function will return a frezon quantized model (int8 model)."
+    "We follow the template to create the tuning function. The function will return a frozen quantized model (INT8 model)."
    ]
   },
   {
@@ -299,7 +317,7 @@
     "\n",
     "def auto_tune(input_graph_path, yaml_config, batch_size):    \n",
     "    fp32_graph = alexnet.load_pb(input_graph_path)\n",
-    "    quan = lpot.Quantization(yaml_config)\n",
+    "    quan = inc.Quantization(yaml_config)\n",
     "    dataloader = Dataloader(batch_size)\n",
     "    assert(dataloader)\n",
     "    q_model = quan(\n",
@@ -327,23 +345,7 @@
    "source": [
     "### Call Function to Quantize the Model\n",
     "\n",
-    "Show the code in \"**lpot_quantize_model.py**\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cat  lpot_quantize_model.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will execute the \"**lpot_quantize_model.py**\" to show the whole process of quantizing a model."
+    "Show the code in `inc_quantize_model.py`."
    ]
   },
   {
@@ -354,14 +356,32 @@
    },
    "outputs": [],
    "source": [
-    "!python lpot_quantize_model.py"
+    "!cat inc_quantize_model.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get a quantized model file \"**alexnet_int8_model.pb**\""
+    "We will execute `inc_quantize_model.py` to show the whole process of quantizing a model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!python inc_quantize_model.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The script creates the file `alexnet_int8_model.pb` that contains the quantized model."
    ]
   },
   {
@@ -370,11 +390,11 @@
    "source": [
     "## Compare Quantized Model\n",
     "\n",
-    "We prepare a script **profiling_lpot.py** to test the performance of PB model.\n",
+    "We prepare the script `profiling_inc.py` to test the performance of the PB model.\n",
     "\n",
-    "There is no correct performance data if run the code by jupyter notebook. So we run the script as process.\n",
+    "If we run the code in the jupyter notebook, we will not get the correct performance data. So we run the script as a process.\n",
     "\n",
-    "Let learn **profiling_lpot.py**. "
+    "Let's take a look at `profiling_inc.py`."
    ]
   },
   {
@@ -383,45 +403,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat profiling_lpot.py"
+    "!cat profiling_inc.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Execute the **profiling_lpot.py** with FP32 model file:"
+    "Execute `profiling_inc.py` with the FP32 model file:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "!python profiling_lpot.py --input-graph=./fp32_frezon.pb --omp-num-threads=4 --num-inter-threads=1 --num-intra-threads=4 --index=32"
+    "!python profiling_inc.py --input-graph=./fp32_frezon.pb --omp-num-threads=4 --num-inter-threads=1 --num-intra-threads=4 --index=32"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Execute the **profiling_lpot.py** with int8 model file:"
+    "Execute `profiling_inc.py` with the INT8 model file:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "!python profiling_lpot.py --input-graph=./alexnet_int8_model.pb --omp-num-threads=4 --num-inter-threads=1 --num-intra-threads=4 --index=8"
+    "!python profiling_inc.py --input-graph=./alexnet_int8_model.pb --omp-num-threads=4 --num-inter-threads=1 --num-intra-threads=4 --index=8"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "!cat 32.json\n",
@@ -433,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Execute the functions to load and show the performance data from 32.json & 8.sjon."
+    "Execute the functions to load and show the performance data from the `32.json` and `8.json` files."
    ]
   },
   {
@@ -497,7 +523,7 @@
    "source": [
     "### FP32 vs INT8\n",
     "\n",
-    "Compare the performance data based on data of FP32 model."
+    "Compare the performance data of the INT8 model with that of the FP32 model."
    ]
   },
   {
@@ -525,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sample Running is Finished"
+    "## Conclusion"
    ]
   },
   {
@@ -541,11 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary\n",
-    "Performance Improvement:\n",
-    "\n",
-    "- FP32 to INT8.\n",
-    "- Intel® Deep Learning Boost speed up INT8 if your CPU is the Second Generation Intel® Xeon® Scalable Processors which supports it."
+    "In this code sample we have compared performance of the FP32 and INT8 models and demonstrated that the INT8 model is faster."
    ]
   },
   {
@@ -558,9 +580,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oneAPI AIKit DLPackage with TF",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "oneapi-aikit-dlpackage-with-tf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -572,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
