--- a/Intel_Modin_and_Intel_Extension_for_Scikit-Learn_E2E_Sample/census_modin.ipynb
+++ b/Intel_Modin_and_Intel_Extension_for_Scikit-Learn_E2E_Sample/census_modin.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Census with Modin and Intel® Data Analytics and Acceleration Library (DAAL) Accelerated Scikit-Learn"
+    "# End-to-end Census workload with Intel® Distribution of Modin and Intel® Extension for Scikit-learn"
    ]
   },
   {
@@ -28,9 +28,10 @@
     }
    },
    "source": [
-    "In this example we will be building an end to end machine learning workload with US census from 1970 to 2010.\n",
-    "It uses Modin with Ray as backend compute engine for ETL, and uses Ridge Regression from DAAL accelerated scikit-learn library\n",
-    "to train and predict the US total income with education information."
+    "In this example we will be running an end-to-end machine learning workload with US census data from 1970 to 2010.\n",
+    "It uses Intel® Distribution of Modin with Ray as backend compute engine for ETL, and uses Ridge Regression algorithm from Intel scikit-learn-extension library to train and predict the co-relation between US total income and education levels.\n",
+    "\n",
+    "**Please run this sample in the Intel SKLearn, XGBoost, & Modin Jupyter Kernel environment.**"
    ]
   },
   {
@@ -55,30 +56,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
-    "Import"
+    "Import basic python modules"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import numpy as np\n",
-    "\n",
-    "from sklearn import config_context\n",
-    "from sklearn.metrics import mean_squared_error, r2_score"
+    "import numpy as np"
    ]
   },
   {
@@ -89,7 +79,9 @@
     }
    },
    "source": [
-    "Import Modin and set Ray as the compute engine"
+    "Import Modin and set Ray as the compute engine. \n",
+    "\n",
+    "You can also learn more about Intel Distribution of Modin's other backend compute engines in the [Intel Distribution of Modin Getting Started Guide](https://www.intel.com/content/www/us/en/developer/articles/technical/intel-distribution-of-modin-getting-started-guide.html)."
    ]
   },
   {
@@ -103,7 +95,10 @@
    "outputs": [],
    "source": [
     "import modin.pandas as pd\n",
-    "os.environ[\"MODIN_ENGINE\"] = \"ray\""
+    "import modin.config as cfg\n",
+    "cfg.Engine.put('Ray') \n",
+    "\n",
+    "df = pd.DataFrame([1]);print(df+1)"
    ]
   },
   {
@@ -114,7 +109,7 @@
     }
    },
    "source": [
-    "Load DAAL accelerated sklearn patch and import packages from the patch"
+    "Import Intel(R) Extension for Scikit-learn which dynamically patches scikit-learn estimators to use Intel(R) oneAPI Data Analytics Library as the underlying solver, while getting the same solution faster."
    ]
   },
   {
@@ -127,9 +122,11 @@
    },
    "outputs": [],
    "source": [
-    "import daal4py.sklearn\n",
-    "daal4py.sklearn.patch_sklearn()\n",
+    "from sklearnex import patch_sklearn\n",
+    "patch_sklearn()\n",
     "\n",
+    "from sklearn import config_context\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "import sklearn.linear_model as lm"
    ]
@@ -142,7 +139,9 @@
     }
    },
    "source": [
-    "Read the data from the downloaded archive file"
+    "Read and load the data into a dataframe from the downloaded archive file using Modin. \n",
+    "\n",
+    "You can change the **nrows** parameter value to increase the data to be used in this workload."
    ]
   },
   {
@@ -155,7 +154,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('ipums_education2income_1970-2010.csv.gz', compression=\"gzip\")"
+    "df = pd.read_csv('ipums_education2income_1970-2010.csv.gz', compression=\"gzip\", nrows=100000)"
    ]
   },
   {
@@ -166,7 +165,7 @@
     }
    },
    "source": [
-    "ETL"
+    "Run ETL operations to prepare and transform the ingested dataset into a form that can be readily consumed by the ridge regression algorithm. Keep columns that are relevant, clean up the samples with invalid income, education and normalize the income to account for yearly inflation"
    ]
   },
   {
@@ -209,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train the model and predict the income"
+    "Train the model and run prediction. Loop 50 times to remove any bias in splitting the dataset into train & test set, in order to reduce chance of over-fitting from selecting a train set that fits the model too well to the test set"
    ]
   },
   {
@@ -254,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the regression results: mean squared error and r square score"
+    "Check the regression results by calculating the accuracy of the prediction using mean squared error and r square score"
    ]
   },
   {
@@ -276,97 +275,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean_mse = sum(mse_values)/len(mse_values)\n",
-    "mean_cod = sum(cod_values)/len(cod_values)\n",
-    "mse_dev = pow(sum([(mse_value - mean_mse)**2 for mse_value in mse_values])/(len(mse_values) - 1), 0.5)\n",
-    "cod_dev = pow(sum([(cod_value - mean_cod)**2 for cod_value in cod_values])/(len(cod_values) - 1), 0.5)\n",
-    "print(\"mean MSE ± deviation: {:.9f} ± {:.9f}\".format(mean_mse, mse_dev))\n",
-    "print(\"mean COD ± deviation: {:.9f} ± {:.9f}\".format(mean_cod, cod_dev))\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train the model and predict the income"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# ML - training and inference\n",
-    "clf = lm.Ridge()\n",
-    "\n",
-    "mse_values, cod_values = [], []\n",
-    "N_RUNS = 50\n",
-    "TRAIN_SIZE = 0.9\n",
-    "random_state = 777\n",
-    "\n",
-    "X = np.ascontiguousarray(X, dtype=np.float64)\n",
-    "y = np.ascontiguousarray(y, dtype=np.float64)\n",
-    "\n",
-    "# cross validation\n",
-    "for i in range(N_RUNS):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=TRAIN_SIZE,\n",
-    "                                                        random_state=random_state)\n",
-    "    random_state += 777\n",
-    "\n",
-    "    # training\n",
-    "    with config_context(assume_finite=True):\n",
-    "        model = clf.fit(X_train, y_train)\n",
-    "\n",
-    "    # inference\n",
-    "    y_pred = model.predict(X_test)\n",
-    "\n",
-    "    mse_values.append(mean_squared_error(y_test, y_pred))\n",
-    "    cod_values.append(r2_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "Check the regression results: mean squared error and r square score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "mean_mse = sum(mse_values)/len(mse_values)\n",
-    "mean_cod = sum(cod_values)/len(cod_values)\n",
-    "mse_dev = pow(sum([(mse_value - mean_mse)**2 for mse_value in mse_values])/(len(mse_values) - 1), 0.5)\n",
-    "cod_dev = pow(sum([(cod_value - mean_cod)**2 for cod_value in cod_values])/(len(cod_values) - 1), 0.5)\n",
-    "print(\"mean MSE ± deviation: {:.9f} ± {:.9f}\".format(mean_mse, mse_dev))\n",
-    "print(\"mean COD ± deviation: {:.9f} ± {:.9f}\".format(mean_cod, cod_dev))\n"
+    "Verify the accuracy:\n",
+    "mean MSE ± deviation: 0.032564569 ± 0.000041799\n",
+    "mean COD ± deviation: 0.995367533 ± 0.000005869"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oneAPI AIKit MLPackage",
+   "display_name": "Intel SKLearn, XGBoost, & Modin",
    "language": "python",
    "name": "oneapi-aikit-mlpackage"
   },
@@ -380,9 +300,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
