Ported IPEX code to be compatible with 1.12.100 API

--- a/Intel_Extension_for_PyTorch_GettingStarted_and_AutoMixedPrecision_Sample/Intel_Extension_for_PyTorch_Getting_Started_and_AutoMixedPrecision.ipynb
+++ b/Intel_Extension_for_PyTorch_GettingStarted_and_AutoMixedPrecision_Sample/Intel_Extension_for_PyTorch_Getting_Started_and_AutoMixedPrecision.ipynb
@@ -111,7 +111,7 @@
     "import torch.nn as nn\n",
     "\n",
     "# Import Extension\n",
-    "import intel_pytorch_extension as ipex\n",
+    "import intel_extension_for_pytorch as ipex\n",
     "\n",
     "class Model(nn.Module):\n",
     "    def __init__(self):\n",
@@ -123,9 +123,9 @@
     "\n",
     "####################IPEX code changes#############################\n",
     "# Convert the input tensor to the Extension device\n",
-    "input = torch.randn(2, 4).to(ipex.DEVICE)\n",
+    "input = torch.randn(2, 4).to()\n",
     "# Convert the model to the Extension device\n",
-    "model = Model().to(ipex.DEVICE)\n",
+    "model = Model().to()\n",
     "##################################################################\n",
     "\n",
     "res = model(input)"
@@ -160,9 +160,8 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "import intel_pytorch_extension as ipex\n",
+    "import intel_extension_for_pytorch as ipex\n",
     "# Automatically mix precision\n",
-    "ipex.enable_auto_mixed_precision(mixed_dtype = torch.bfloat16)\n",
     "\n",
     "class Model(nn.Module):\n",
     "    def __init__(self):\n",
@@ -171,11 +170,11 @@
     "\n",
     "    def forward(self, input):\n",
     "        return self.linear(input)\n",
+    "with torch.cpu.amp.autocast(), torch.no_grad():\n",
+    "    input = torch.randn(2, 4).to()\n",
+    "    model = Model().to()\n",
     "\n",
-    "input = torch.randn(2, 4).to(ipex.DEVICE)\n",
-    "model = Model().to(ipex.DEVICE)\n",
-    "\n",
-    "res = model(input)"
+    "    res = model(input)"
    ]
   },
   {
@@ -213,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
