Fix AI Tools URL
Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

--- a/AI_Kit_Welcome.ipynb
+++ b/AI_Kit_Welcome.ipynb
@@ -39,7 +39,7 @@
     "<a id=\"sec-env\"></a>\n",
     "## 1. Intel® oneAPI AI Analytics Toolkit Environment Packages Information\n",
     "\n",
-    "You can find more detailed information on using the Intel® oneAPI AI Analytics Toolkit at <a href=\"software.intel.com/oneapi/ai-kit\">software.intel.com/oneapi/ai-kit</a>. \n",
+    "You can find more detailed information on using the Intel® oneAPI AI Analytics Toolkit at <a href=\"https://www.intel.com/content/www/us/en/developer/tools/oneapi/ai-analytics-toolkit.html\">AI Tools</a>. \n",
     "\n",
     "On RedHat OpenShift Data Science, we have provided some pre-installed AI Kit environments based on different workload needs:\n",
     "\n",
