Some updates based on review

--- a/intel-extension-for-pytorch/Distributed/KubeRay_Getting_Started.ipynb
+++ b/intel-extension-for-pytorch/Distributed/KubeRay_Getting_Started.ipynb
@@ -5,7 +5,7 @@
    "id": "1e4160f6-5d79-418a-a46f-4a50ec56db62",
    "metadata": {},
    "source": [
-    "# Intel Optimized Distributed PyTorch Training on OpenShift using KubeRay Operator"
+    "# Distributed PyTorch Training on OpenShift using KubeRay Operator and Intel® Extension for PyTorch*"
    ]
   },
   {
@@ -15,7 +15,7 @@
     "tags": []
    },
    "source": [
-    "This notebook demonstrates how you can utilize the Intel Extension for PyTorch to optimize distributed workloads  on Intel hardware with RedHat OpenShift AI and KubeRay operator. For this demo we finetune a Large Language Model from HuggingFace tranformers on 2 or more nodes. The notebook uses codeflare SDK to create a Ray cluster and launch a distributed training job on it."
+    "This notebook demonstrates utilizing the Intel Extension for PyTorch to optimize distributed workloads  on Intel hardware with RedHat OpenShift AI and KubeRay operator. For this demo we finetune a Large Language Model from HuggingFace tranformers on 2 or more nodes. The notebook uses codeflare SDK to create a Ray cluster and launch a distributed training job on it."
    ]
   },
   {
@@ -80,14 +80,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6992dd4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Variables for user to be set.\n",
+    "\n",
+    "auth_token = \"XXXX\"\n",
+    "api_server = \"XXXX\"\n",
+    "registry = \"XXXX\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dc5c7791-a2fc-4b2d-af40-6b65ec8b976e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "auth_token = \"XXXX\"\n",
-    "api_server = \"XXXX\"\n",
     "auth = TokenAuthentication(\n",
     "    token=auth_token,\n",
     "    server=api_server,\n",
@@ -125,7 +137,6 @@
    },
    "outputs": [],
    "source": [
-    "registry = \"XXXX\"\n",
     "cluster = Cluster(ClusterConfiguration(\n",
     "    name='ray-ipex-demo',\n",
     "    namespace='ray-ipex',\n",
@@ -297,14 +308,6 @@
    "source": [
     "cluster.down()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa28c7b5-b64b-46c5-af2a-a420a6a7156a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
